--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/backgroundActivity"
     tools:context=".MainActivity">
 
     <android.support.design.widget.BottomNavigationView
@@ -14,11 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="@color/navigationBarBackground"
         android:elevation="24dp"
-        app:itemBackground="@color/white"
-        app:itemIconTint="@color/black"
-        app:itemTextColor="@color/black"
+        app:itemBackground="@color/navigationBarItemBackground"
+        app:itemIconTint="@color/navigationBarIconTint"
+        app:itemTextColor="@color/navigationBarTextColor"
         app:menu="@menu/main_bottom_navigation"/>
 
     <android.support.v4.view.ViewPager
@@ -27,7 +27,6 @@
         android:layout_height="match_parent"
         android:layout_above="@id/main_bottom_navigation_view"
         android:layout_alignParentTop="true"
-        android:background="@color/white"
         android:elevation="0dp"/>
 
 </RelativeLayout>
