--- a/app/src/main/res/layout/position_fragment.xml
+++ b/app/src/main/res/layout/position_fragment.xml
@@ -5,8 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:background="@color/backgroundFragment"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <!-- Coordinates -->
     <RelativeLayout
@@ -14,8 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/white"
-        android:elevation="0dp"
         android:gravity="center">
 
         <android.support.v4.view.ViewPager
@@ -32,8 +34,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center_horizontal"
                 android:gravity="center_vertical"
-                app:selectedDotColor="@color/gray12"
-                app:unselectedDotColor="@color/gray4"/>
+                app:selectedDotColor="@color/viewPagerTabDotSelected"
+                app:unselectedDotColor="@color/viewPagerTabDotUnselected"/>
 
         </android.support.v4.view.ViewPager>
 
@@ -63,134 +65,134 @@
 
     </RelativeLayout>
 
+    <include layout="@layout/divider"/>
+
     <!-- Elevation -->
     <LinearLayout
-        style="@style/StatRow"
-        android:background="@color/white"
-        android:elevation="1dp"
+        style="@style/PositionStatRow"
         android:orientation="horizontal">
 
         <ImageView
-            style="@style/StatImageView"
+            style="@style/PositionStatIcon"
             android:contentDescription="@string/elevation"
             android:src="@drawable/ic_terrain_black_24dp"/>
 
         <TextView
             android:id="@+id/elevation_label_text_view"
-            style="@style/LabelTextView"
+            style="@style/PositionStatLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/elevation"/>
 
         <TextView
             android:id="@+id/elevation_value_text_view"
-            style="@style/ValueTextView"
+            style="@style/PositionStatValue"
             tools:text="10000"/>
 
         <TextView
             android:id="@+id/elevation_unit_text_view"
-            style="@style/UnitTextView"
+            style="@style/PositionStatUnit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="ft"/>
 
     </LinearLayout>
 
+    <include layout="@layout/divider"/>
+
     <!-- Speed -->
     <LinearLayout
-        style="@style/StatRow"
-        android:background="@color/white"
-        android:elevation="2dp"
+        style="@style/PositionStatRow"
         android:orientation="horizontal">
 
         <ImageView
-            style="@style/StatImageView"
+            style="@style/PositionStatIcon"
             android:contentDescription="@string/speed"
             android:src="@drawable/speedometer"/>
 
         <TextView
             android:id="@+id/speed_label_text_view"
-            style="@style/LabelTextView"
+            style="@style/PositionStatLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/speed"/>
 
         <TextView
             android:id="@+id/speed_value_text_view"
-            style="@style/ValueTextView"
+            style="@style/PositionStatValue"
             tools:text="100"/>
 
         <TextView
             android:id="@+id/speed_unit_text_view"
-            style="@style/UnitTextView"
+            style="@style/PositionStatUnit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="mph"/>
 
     </LinearLayout>
 
+    <include layout="@layout/divider"/>
+
     <!-- Bearing -->
     <LinearLayout
-        style="@style/StatRow"
-        android:background="@color/white"
-        android:elevation="3dp"
+        style="@style/PositionStatRow"
         android:orientation="horizontal">
 
         <ImageView
-            style="@style/StatImageView"
+            style="@style/PositionStatIcon"
             android:contentDescription="@string/bearing"
             android:src="@drawable/ic_explore_black_24dp"/>
 
         <TextView
             android:id="@+id/bearing_label_text_view"
-            style="@style/LabelTextView"
+            style="@style/PositionStatLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bearing"/>
 
         <TextView
             android:id="@+id/bearing_value_text_view"
-            style="@style/ValueTextView"
+            style="@style/PositionStatValue"
             tools:text="359"/>
 
         <TextView
             android:id="@+id/bearing_unit_text_view"
-            style="@style/UnitTextView"
+            style="@style/PositionStatUnit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/unit_degrees"/>
 
     </LinearLayout>
 
+    <include layout="@layout/divider"/>
+
     <!-- Accuracy -->
     <LinearLayout
-        style="@style/StatRow"
-        android:background="@color/white"
-        android:elevation="4dp"
+        style="@style/PositionStatRow"
         android:orientation="horizontal">
 
         <ImageView
-            style="@style/StatImageView"
+            style="@style/PositionStatIcon"
             android:contentDescription="@string/accuracy"
             android:src="@drawable/bullseye"/>
 
         <TextView
             android:id="@+id/accuracy_label_text_view"
-            style="@style/LabelTextView"
+            style="@style/PositionStatLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/accuracy"/>
 
         <TextView
             android:id="@+id/accuracy_value_text_view"
-            style="@style/ValueTextView"
+            style="@style/PositionStatValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="10"/>
 
         <TextView
             android:id="@+id/accuracy_unit_text_view"
-            style="@style/UnitTextView"
+            style="@style/PositionStatUnit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="ft"/>
